Hakan Dilek drops his packages

--- a/devel/programming/languages/java/commons-beanutils/pspec.xml
+++ b/devel/programming/languages/java/commons-beanutils/pspec.xml
@@ -5,10 +5,10 @@
         <Name>commons-beanutils</Name>
         <Homepage>http://jakarta.apache.org/commons/beanutils/</Homepage>
         <Packager>
-            <Name>Hakan Dilek</Name>
-            <Email>hakandilek@gmail.com</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
-        <License>Apache 2.0</License>
+        <License>Apache-2.0</License>
         <IsA>library</IsA>
         <Summary>Jakarta-Commons Beanutils Component</Summary>
         <Archive sha1sum="3c1eceae87320fe7e0eec8573fd19b8ff283d1c5" type="targz">mirrors://apache/jakarta/commons/beanutils/source/commons-beanutils-1.7.0-src.tar.gz</Archive>
