--- a/devel/programming/languages/java/commons-codec/pspec.xml
+++ b/devel/programming/languages/java/commons-codec/pspec.xml
@@ -5,10 +5,10 @@
         <Name>commons-codec</Name>
         <Homepage>http://jakarta.apache.org/commons/codec/</Homepage>
         <Packager>
-            <Name>Hakan Dilek</Name>
-            <Email>hakandilek@gmail.com</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
-        <License>Apache 2.0</License>
+        <License>Apache-2.0</License>
         <IsA>library</IsA>
         <Summary>Commons Codec provides implementations of common encoders and decoders such as Base64, Hex, Phonetic and URLs.</Summary>
         <Archive sha1sum="d490a9bb30ea9e8b95c250f4d96842e0ce0c60d7" type="targz">mirrors://apache/jakarta/commons/codec/source/commons-codec-1.3-src.tar.gz</Archive>
