--- a/devel/programming/languages/java/commons-digester/pspec.xml
+++ b/devel/programming/languages/java/commons-digester/pspec.xml
@@ -5,10 +5,10 @@
         <Name>commons-digester</Name>
         <Homepage>http://jakarta.apache.org/commons/digester/</Homepage>
         <Packager>
-            <Name>Hakan Dilek</Name>
-            <Email>hakandilek@gmail.com</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
-        <License>Apache 2.0</License>
+        <License>Apache-2.0</License>
         <IsA>library</IsA>
         <Summary>
             Jakarta-Commons component providing XML parsing and XML to
