--- a/devel/programming/languages/java/commons-el/pspec.xml
+++ b/devel/programming/languages/java/commons-el/pspec.xml
@@ -5,10 +5,10 @@
         <Name>commons-el</Name>
         <Homepage>http://jakarta.apache.org/commons/el/</Homepage>
         <Packager>
-            <Name>Hakan Dilek</Name>
-            <Email>hakandilek@gmail.com</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
-        <License>Apache 2.0</License>
+        <License>Apache-2.0</License>
         <IsA>library</IsA>
         <Summary>EL is the JSP 2.0 Expression Language Interpreter from Apache.</Summary>
         <Archive sha1sum="bb39426efbd03a2b27105fa42faf90858cfc3d50" type="targz">mirrors://apache/jakarta/commons/el/source/commons-el-1.0-src.tar.gz</Archive>
