--- a/devel/programming/languages/java/commons-fileupload/pspec.xml
+++ b/devel/programming/languages/java/commons-fileupload/pspec.xml
@@ -5,10 +5,10 @@
         <Name>commons-fileupload</Name>
         <Homepage>http://jakarta.apache.org/commons/fileupload/</Homepage>
         <Packager>
-            <Name>Hakan Dilek</Name>
-            <Email>hakandilek@gmail.com</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
-        <License>Apache 2.0</License>
+        <License>Apache-2.0</License>
         <IsA>library</IsA>
         <Summary>File upload module for servlet applications</Summary>
         <Archive sha1sum="c5d7744f6d6bb6e13631071797936f7e2505f6fd" type="targz">mirrors://apache/jakarta/commons/fileupload/source/commons-fileupload-1.2-src.tar.gz</Archive>
