--- a/devel/programming/languages/java/commons-io/pspec.xml
+++ b/devel/programming/languages/java/commons-io/pspec.xml
@@ -5,10 +5,10 @@
         <Name>commons-io</Name>
         <Homepage>http://jakarta.apache.org/commons/io/</Homepage>
         <Packager>
-            <Name>Hakan Dilek</Name>
-            <Email>hakandilek@gmail.com</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
-        <License>Apache 2.0</License>
+        <License>Apache-2.0</License>
         <IsA>library</IsA>
         <Summary>Commons IO is a library of utilities to assist with developing IO functionality</Summary>
         <Archive sha1sum="9758bd65a0286856eda75644250ff04b2661079c" type="targz">mirrors://apache/jakarta/commons/io/source/commons-io-1.3.2-src.tar.gz</Archive>
