--- a/devel/programming/languages/java/commons-launcher/pspec.xml
+++ b/devel/programming/languages/java/commons-launcher/pspec.xml
@@ -5,10 +5,10 @@
         <Name>commons-launcher</Name>
         <Homepage>http://jakarta.apache.org/commons/launcher/</Homepage>
         <Packager>
-            <Name>Hakan Dilek</Name>
-            <Email>hakandilek@gmail.com</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
-        <License>Apache 2.0</License>
+        <License>Apache-2.0</License>
         <IsA>library</IsA>
         <Summary>The Launcher Component is designed to be a cross platform Java application launcher.</Summary>
         <Archive sha1sum="6cc1d9bdae505f280850d51f09e86279fd60339b" type="targz">mirrors://apache/jakarta/commons/launcher/source/commons-launcher-1.1-src.tar.gz</Archive>
