--- a/devel/programming/languages/java/commons-logging/pspec.xml
+++ b/devel/programming/languages/java/commons-logging/pspec.xml
@@ -5,10 +5,10 @@
         <Name>commons-logging</Name>
         <Homepage>http://jakarta.apache.org/commons/logging/</Homepage>
         <Packager>
-            <Name>Hakan Dilek</Name>
-            <Email>hakandilek@gmail.com</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
-        <License>Apache 2.0</License>
+        <License>Apache-2.0</License>
         <IsA>library</IsA>
         <Summary>Jakarta-Commons Logging Component</Summary>
         <Archive sha1sum="cbaf5c65979e6733b07b27b01af083965a55fbad" type="targz">mirrors://apache/jakarta/commons/logging/source/commons-logging-1.1-src.tar.gz</Archive>
