--- a/devel/programming/languages/java/commons-modeler/pspec.xml
+++ b/devel/programming/languages/java/commons-modeler/pspec.xml
@@ -5,10 +5,10 @@
         <Name>commons-modeler</Name>
         <Homepage>http://jakarta.apache.org/commons/modeler/</Homepage>
         <Packager>
-            <Name>Hakan Dilek</Name>
-            <Email>hakandilek@gmail.com</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
-        <License>Apache 2.0</License>
+        <License>Apache-2.0</License>
         <IsA>library</IsA>
         <Summary>The Modeler component of the Jakarta Commons for Model MBeans (management beans) support</Summary>
         <Archive sha1sum="8ae3fcd1b45975a95e52c031a84a39a89341a102" type="targz">mirrors://apache/jakarta/commons/modeler/source/commons-modeler-2.0-src.tar.gz</Archive>
