--- a/devel/programming/languages/java/log4j/pspec.xml
+++ b/devel/programming/languages/java/log4j/pspec.xml
@@ -5,10 +5,10 @@
         <Name>log4j</Name>
         <Homepage>http://logging.apache.org/log4j/</Homepage>
         <Packager>
-            <Name>Hakan Dilek</Name>
-            <Email>hakandilek@gmail.com</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
-        <License>Apache 2.0</License>
+        <License>Apache-2.0</License>
         <IsA>library</IsA>
         <Summary>Java-based logging utility.</Summary>
         <Archive sha1sum="2365021f8f277e77e281b0e01333ecea7c721e3e" type="targz">mirrors://apache/logging/log4j/1.2.14/logging-log4j-1.2.14.tar.gz</Archive>
