--- a/devel/programming/languages/java/openjms-bin/pspec.xml
+++ b/devel/programming/languages/java/openjms-bin/pspec.xml
@@ -5,10 +5,10 @@
         <Name>openjms-bin</Name>
         <Homepage>http://openjms.sourceforge.net/</Homepage>
         <Packager>
-            <Name>Hakan Dilek</Name>
-            <Email>hakandilek@gmail.com</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
-        <License>Apache 2.0</License>
+        <License>Apache-2.0</License>
         <IsA>library</IsA>
         <Summary>OpenJMS is an open source implementation of Sun Microsystems's  Java Message Service API 1.1 Specification</Summary>
         <Archive sha1sum="596ba4deb17fdcf60626c4190f3f768eb5117b89" type="targz">http://prdownloads.sourceforge.net/openjms/openjms-0.7.7-beta-1.tar.gz</Archive>
