--- a/devel/programming/languages/java/commons-httpclient/pspec.xml
+++ b/devel/programming/languages/java/commons-httpclient/pspec.xml
@@ -5,10 +5,10 @@
         <Name>commons-httpclient</Name>
         <Homepage>http://jakarta.apache.org/commons/httpclient/</Homepage>
         <Packager>
-            <Name>Hakan Dilek</Name>
-            <Email>hakandilek@gmail.com</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
-        <License>Apache 2.0</License>
+        <License>Apache-2.0</License>
         <IsA>library</IsA>
         <Summary>HTTP client support for servlet programs</Summary>
         <Archive sha1sum="6deb04b60ec3093f0c8ee56b7bbc6980435b319c" type="targz">mirrors://apache/jakarta/commons/httpclient/source/commons-httpclient-3.0.1-src.tar.gz</Archive>
