--- a/devel/programming/languages/java/jetspeed-portlet-api/pspec.xml
+++ b/devel/programming/languages/java/jetspeed-portlet-api/pspec.xml
@@ -5,10 +5,10 @@
         <Name>jetspeed-portlet-api</Name>
         <Homepage>http://portals.apache.org/jetspeed-2/</Homepage>
         <Packager>
-            <Name>Hakan Dilek</Name>
-            <Email>hakandilek@gmail.com</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
-        <License>Apache 2.0</License>
+        <License>Apache-2.0</License>
         <IsA>library</IsA>
         <Summary>Jetspeed 2 Portlet API implementation of JSR 168</Summary>
         <Archive sha1sum="266805dc81af6df2be6fa15d4e42ecca014cd945" type="targz">mirrors://apache/portals/jetspeed-2/sources/jetspeed-2.1-src.tar.gz</Archive>
