--- a/devel/programming/languages/java/tomcat-servlet-api/pspec.xml
+++ b/devel/programming/languages/java/tomcat-servlet-api/pspec.xml
@@ -5,10 +5,10 @@
         <Name>tomcat-servlet-api</Name>
         <Homepage>http://tomcat.apache.org/</Homepage>
         <Packager>
-            <Name>Hakan Dilek</Name>
-            <Email>hakandilek@gmail.com</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
-        <License>Apache 2.0</License>
+        <License>Apache-2.0</License>
         <IsA>library</IsA>
         <Summary>Java Servlet Api Reference Implementation</Summary>
         <Archive sha1sum="59272b5eedde9c32a126679ff9e1d2a5f56265c8" type="targz">mirrors://apache/tomcat/tomcat-5/v5.5.23/src/apache-tomcat-5.5.23-src.tar.gz</Archive>
