--- a/devel/programming/languages/perl/perl-Sys-Syslog/pspec.xml
+++ b/devel/programming/languages/perl/perl-Sys-Syslog/pspec.xml
@@ -5,8 +5,8 @@
         <Name>perl-Sys-Syslog</Name>
         <Homepage>http://search.cpan.org/dist/Sys-Syslog</Homepage>
         <Packager>
-            <Name>Mustafa Günay</Name>
-            <Email>mgunay@pardusman.org</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
         <License>GPLv2</License>
         <IsA>library</IsA>
