--- a/devel/programming/languages/perl/perl-X10/pspec.xml
+++ b/devel/programming/languages/perl/perl-X10/pspec.xml
@@ -5,8 +5,8 @@
         <Name>perl-X10</Name>
         <Homepage>http://search.cpan.org/dist/X10-0.03/</Homepage>
         <Packager>
-            <Name>Mustafa Günay</Name>
-            <Email>mgunay@pardusman.org</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
         <License>Artistic</License>
         <IsA>app:console</IsA>
