--- a/devel/programming/languages/python/pybluez/pspec.xml
+++ b/devel/programming/languages/python/pybluez/pspec.xml
@@ -5,8 +5,8 @@
         <Name>pybluez</Name>
         <Homepage>http://org.csail.mit.edu/pybluez/index.html</Homepage>
         <Packager>
-            <Name>Mustafa Günay</Name>
-            <Email>mgunay@pardusman.org</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
         <License>GPLv2</License>
         <IsA>library</IsA>
