--- a/devel/programming/languages/python/rapyd/pspec.xml
+++ b/devel/programming/languages/python/rapyd/pspec.xml
@@ -5,8 +5,8 @@
         <Name>rapyd</Name>
         <Homepage>http://www.bitflipper.ca/rapyd/</Homepage>
         <Packager>
-            <Name>Mustafa Günay</Name>
-            <Email>mgunay@pardusman.org</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
         <License>GPLv2</License>
         <IsA>library</IsA>
