--- a/devel/programming/languages/python/tk-happy/pspec.xml
+++ b/devel/programming/languages/python/tk-happy/pspec.xml
@@ -5,8 +5,8 @@
         <Name>tk-happy</Name>
         <Homepage>http://tk-happy.sourceforge.net/</Homepage>
         <Packager>
-            <Name>Mustafa Günay</Name>
-            <Email>mgunay@pardusman.org</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
         <License>BSD</License>
         <IsA>library</IsA>
