Takeover of slime, sbcl, mpd and libmpd.

--- a/devel/programming/languages/lisp/sbcl/pspec.xml
+++ b/devel/programming/languages/lisp/sbcl/pspec.xml
@@ -5,8 +5,8 @@
         <Name>sbcl</Name>
         <Homepage>http://sbcl.sourceforge.net/</Homepage>
         <Packager>
-            <Name>Pardus</Name>
-            <Email>admins@pardus.org.tr</Email>
+            <Name>Güngör Erseymen</Name>
+            <Email>gelurine@gmail.com</Email>
         </Packager>
         <License>MIT</License>
         <IsA>app:console</IsA>
