PEAR updates -- main package

--- a/devel/programming/languages/php/PEAR/PEAR/translations.xml
+++ b/devel/programming/languages/php/PEAR/PEAR/translations.xml
@@ -2,6 +2,7 @@
 <PISI>
     <Source>
         <Name>PEAR</Name>
-        <Summary xml:lang="tr">PEAR Taban Sınıfı</Summary>
+        <Summary xml:lang="tr">Ana PEAR sınıfı</Summary>
+        <Description xml:lang="tr">PEAR eklentilerini çalıştırabilmek için gerekli olan ana sınıf.</Description>
     </Source>
 </PISI>
