--- a/devel/programming/languages/php/PEAR/component.xml
+++ b/devel/programming/languages/php/PEAR/component.xml
@@ -6,7 +6,7 @@
     <Summary xml:lang="tr">Bir çok kullanışlı PHP sınıfları içerir</Summary>
     <Description>...</Description>
     <Packager>
-        <Name>Eren Türkay</Name>
-        <Email>turkay.eren@gmail.com</Email>
+        <Name>Emre Yılmaz</Name>
+        <Email>yilmazyemre@yahoo.com</Email>
     </Packager>
 </PISI>
