--- a/devel/programming/languages/php/PEAR/PEAR/pspec.xml
+++ b/devel/programming/languages/php/PEAR/PEAR/pspec.xml
@@ -5,13 +5,14 @@
         <Name>PEAR</Name>
         <Homepage>http://pear.php.net/package/PEAR/</Homepage>
         <Packager>
-            <Name>Pardus</Name>
-            <Email>admins@pardus.org.tr</Email>
+            <Name>Emre Yılmaz</Name>
+            <Email>yilmazyemre@yahoo.com</Email>
         </Packager>
         <License>PHP</License>
         <IsA>library</IsA>
-        <Summary>PEAR Base Class</Summary>
-        <Archive sha1sum="f03a8bfbd68bd1834829a67346711fd157da3685" type="targz">http://download.pear.php.net/package/PEAR-1.5.4.tgz</Archive>
+        <Summary>Base PEAR class</Summary>
+        <Description>Base PEAR class that required other PEAR packages</Description>
+        <Archive sha1sum="92b7b43ef0872efa461ec22a63769898f95d48c4" type="targz">http://download.pear.php.net/package/PEAR-1.7.2.tgz</Archive>
     </Source>
 
     <Package>
@@ -22,6 +23,17 @@
     </Package>
 
     <History>
+        <Update release="3">
+            <Date>2009-03-02</Date>
+            <Version>1.7.2</Version>
+            <Comment>
+                * Stable update
+                * Add Description and translations.xml
+                * Package takeover
+            </Comment>
+            <Name>Emre Yılmaz</Name>
+            <Email>yilmazyemre@yahoo.com</Email>
+        </Update>
         <Update release="2">
             <Date>2007-05-23</Date>
             <Version>1.5.4</Version>
