--- a/devel/programming/languages/php/PEAR/PEAR-Archive_Tar/pspec.xml
+++ b/devel/programming/languages/php/PEAR/PEAR-Archive_Tar/pspec.xml
@@ -3,10 +3,10 @@
 <PISI>
     <Source>
         <Name>PEAR-Archive_Tar</Name>
-        <Homepage>http://pear.php.net/package/Archive_Tar/</Homepage>
+        <Homepage>http://pear.php.net/package/Archive_Tar</Homepage>
         <Packager>
-            <Name>Pardus</Name>
-            <Email>admins@pardus.org.tr</Email>
+            <Name>Emre Yılmaz</Name>
+            <Email>yilmazyemre@yahoo.com</Email>
         </Packager>
         <License>PHP</License>
         <IsA>library</IsA>
