Rename runtime dependency simplejson as python-simplejson

--- a/devel/programming/languages/python/python-twitter/pspec.xml
+++ b/devel/programming/languages/python/python-twitter/pspec.xml
@@ -21,7 +21,7 @@
     <Package>
         <Name>python-twitter</Name>
         <RuntimeDependencies>
-            <Dependency>simplejson</Dependency>
+            <Dependency>python-simplejson</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
@@ -30,13 +30,20 @@
     </Package>
     
     <History>
+        <Update release="5">
+            <Date>2009-03-16</Date>
+            <Version>0.5</Version>
+            <Comment>Rename runtime dependency simplejson as python-simplejson</Comment>
+            <Name>Emre Yılmaz</Name>
+            <Email>yilmazyemre@yahoo.com</Email>
+        </Update>
         <Update release="4">
             <Date>2009-01-28</Date>
             <Version>0.5</Version>
             <Comment>
-                * package takeover
-                * add missing dependency setuptools
-                * add translations.xml
+                * Package takeover
+                * Add missing dependency setuptools
+                * Add translations.xml
             </Comment>
             <Name>Emre Yılmaz</Name>
             <Email>yilmazyemre@yahoo.com</Email>
